@@ -1,3 +1,11 @@
+2000-09-11  JP Rosevear  <jpr@helixcode.com>
+
+	* conduits/todo/todo-conduit.c (comp_from_remote_record): Use
+	description list instead of comment list for pilot todo note
+	(transmit): Check for null cal component properties, set priority
+	correctly, use description list instead of comment list.  Make
+	pilot record private when appropriate.
+
 2000-09-10  JP Rosevear  <jpr@helixcode.com>
 
 	* conduits/todo/todo-conduit.c (comp_from_remote_record): Only
